infrastructure/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: "k8s-lb-01.crulabs.intern"
    cert-manager.io/cluster-issuer: "crulabs-ca-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - secretName: kubernetes-dashboard-tls
      hosts:
        - dashboard.crulabs.intern
  rules:
    - host: dashboard.crulabs.intern
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
